# CarND-MPC-Quizzes

./: .gitignore  CODEOWNERS  Dockerfile  README.md  install-ubuntu-MPC.sh  install-workspace-MPC.sh  install_Ipopt_CppAD.md  install_ipopt.sh
global_kinematic_model/: CMakeLists.txt
global_kinematic_model/logs/: Lf1.txt  Lf2.txt  Lf5.txt
global_kinematic_model/solution/: main.cpp
global_kinematic_model/src/: main.cpp  viz.py
mind_line_ascii_plots/: CMakeLists.txt  build.sh  clean.sh  run.sh
mind_line_ascii_plots/solution/: MPC.cpp
mind_line_ascii_plots/src/: MPC.cpp  plot_data_ascii.plot
mind_line_graphics_plots/: clean.sh  run.sh
mind_line_graphics_plots/solution/: MPC.cpp
mind_line_graphics_plots/src/: MPC.cpp  MPC.h
mpc_to_line/: CMakeLists.txt
mpc_to_line/solution/: MPC.cpp  main.cpp
mpc_to_line/src/: MPC.cpp  MPC.h  helpers.h  main.cpp
polyfit/: CMakeLists.txt
polyfit/solution/: main.cpp
polyfit/src/: main.cpp
q1/solution/: MPC.cpp
q1/src/: MPC.cpp  MPC.h
q2/: CMakeLists.txt
vehicle_dynamics/: quizzes.md
